force-app/main/default/objects/RE_MidDay_ActualSource__c/RE_MidDay_ActualSource__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RE MidDay ActualSource</label>
</CustomObject>