force-app/main/default/objects/RE_MidDay_ActualSource__c/fields/RE_Actual_Difference__c.field-meta.xml
<CustomField>
    <fullName>RE_Actual_Difference__c</fullName>
    <label>Actual Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>