force-app/main/default/objects/RE_MidDay_ActualSource__c/fields/RE_Actual_Source__c.field-meta.xml
<CustomField>
    <fullName>RE_Actual_Source__c</fullName>
    <label>Actual Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>