force-app/main/default/objects/RE_MidDay_ActualSource__c/fields/RE_Target_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_Target_Product__c</fullName>
    <label>Target Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>