force-app/main/default/objects/RE_MidDay_ActualSource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Actual_Difference__c</columns>
    <columns>RE_Actual_Product__c</columns>
    <columns>RE_Actual_Source__c</columns>
    <columns>RE_Target_Product__c</columns>
    <columns>RE_Target_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>